@@ -1,3 +1,7 @@
+June 2022
+Handle version 0.9 magic header. Show Compression Levels and
+comments.
+
 December 2021
 Some printf() output formatting. Add Thousands separator.
 
